--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <canvas id="caro" width="600" height="600"></canvas>
   <br>
   <button id="reset">Chơi lại</button>
+  <p id="status"></p>
   <script src="main.js"></script>
 </body>
 </html>
