--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
   <button id="reset">Chơi lại</button>
   <label><input type="checkbox" id="aiMode"> Chơi với AI</label>
   <p id="status"></p>
-  <script src="main.js"></script>
+  <script src="main_minimax.js"></script>
 </body>
 </html>
